--- a/src/main/resources/templates/main/calendar.html
+++ b/src/main/resources/templates/main/calendar.html
@@ -14,439 +14,15 @@
 
 
     <script th:inline="javascript">
-        // var calList = [[${calData}]];
-        // var calList2 = [[${session}]];
-        // console.log("model" + calList[0][title]);
-        // console.log("session" + calList2);
-        console.log("여기는 오니 JS 시작점")
-
         var calendar = null;
-        var groupNo = "-1";
+        var groupNo = "0";
 
         if([[${groupNo}]] !== null){
             groupNo = [[${groupNo}]];
         }
-
         let belongGroupX = [[${belongGroup}]];
-        let array = [];
-        belongGroupX.forEach((value) => array.push(value))
-        let nums = [];
-
-        array.forEach(value => {
-            nums.push(value.groupNo.toString());
-        })
-
-        if(nums.indexOf(groupNo.toString()) === -1 && groupNo.toString() !== "0" && groupNo.toString() !== "-1"){
-            alert("자신이 가입한 그룹으로만 갈 수 있습니다!");
-            location.href="/main/calendar?groupNo=0";
-        }
-
-
-        document.addEventListener('DOMContentLoaded', function() {
-            var calendarEl = document.getElementById('calendar');
-
-            calendarObect = {
-                headerToolbar: {
-                    left: 'prev,next,today',
-                    center: 'title',
-                    right: ''
-                },
-                // initialDate: '2023-01-12',
-                navLinks: true, // can click day/week names to navigate views
-                selectable: true,
-                selectMirror: true,
-                editable: true,
-                locale: 'ko',
-                select: function (arg) {
-                    var title = prompt('Event Title:');
-                    if (title) {
-                        console.log(arg.start);
-                        console.log(arg.end);
-                        let obj = {
-                            title: title,
-                            start: arg.start,
-                            end: arg.end,
-                            allDay: arg.allDay,
-                            groupNo: groupNo
-                        }
-                        save_data(obj);
-                        // calendar.addEvent({
-                        //
-                        //     title: title,
-                        //     start: arg.start,
-                        //     end: arg.end,
-                        //     allDay: arg.allDay
-                        // })
-                    }
-                    calendar.unselect()
-                },
-                eventClick: function (arg) {
-                    if (confirm('Are you sure you want to delete this event?')) {
-                        arg.event.remove() // 여기서 리무브를 시키면 안되고 db에 삭제를 시켜야 한다.
-                        let obj = {
-                            title: arg.event._def.title,
-                            start: arg.event._instance.range.start
-                        };
-
-                        delete_data(obj);
-                    }
-                    console.log(arg.event);
-                },
-
-                eventDrop: function(info) {
-                    //드래그 수정
-                    let obj = {
-                        // 이건 수정된 정보
-                        title: info.event._def.title,
-                        start: info.event._instance.range.start,
-                        end: info.event._instance.range.end
-                    }
-
-                    let oldObj = {
-                        title: info.oldEvent._def.title,
-                        start: info.oldEvent._instance.range.start,
-                        end: info.oldEvent._instance.range.end
-                    }
-                    // console.log(info)
-                    // console.log(obj)
-                    // console.log(oldObj)
-                    update_data(obj, oldObj);
-
-                },
-                dayMaxEvents: true, // allow "more" link when too many events
-                events:
-                    function (info, successCallback, failureCallback) {
-                        $.ajax({
-                            url: '/set',
-                            type: 'post',
-                            data: {groupNo : groupNo},
-                            dataType: 'json',
-                            success: function (data) {
-                                successCallback(data);
-                            },
-                            error: function (error) {
-                                console.log("set"+error)
-                            }
-                        })
-                    }
-
-            }
-        calendar = new FullCalendar.Calendar(calendarEl, calendarObect);
-        calendar.render();
-        });
-
-
-            function save_data(obj) {
-                    console.log("개인");
-                    $.ajax({
-                        url: '/save',
-                        type: 'post',
-                        data: JSON.stringify(obj),
-                        dataType: 'json',
-                        contentType: "application/json",
-                        success: function (data) {
-
-                        },
-                        error: function (error) {
-                            console.log("save"+error)
-                        }
-                    })
-                location.reload();
-            }
-
-            function delete_data(obj) {
-                $.ajax({
-                    type: 'post',
-                    url: '/delete',
-                    data: JSON.stringify(obj),
-                    dataType: 'json',
-                    contentType: "application/json",
-                    success: function (data) {
-                        console.log(data)
-                    },
-                    error: function (error) {
-                        console.log("delete"+error)
-                    }
-                })
-            }
-
-            function update_data(obj, oldObj) {
-                console.log(obj)
-                console.log(oldObj)
-                let objList = [obj, oldObj]
-                $.ajax({
-                    url: "/update",
-                    type: 'patch',
-                    data: JSON.stringify(objList),
-                    dataType: 'json',
-                    contentType: "application/json",
-                    success: function (data) {
-
-                    },
-                    error: function (error) {
-                        console.log("update"+error)
-                    }
-                })
-            }
-
-
-
     </script>
-    <style>
-        *{
-            font-family: 'Jua', sans-serif;
-            user-select: none;
-        }
 
-        /* 일요일 날짜: 빨간색 */
-        .fc-day-sun a {
-            color: red;
-        }
-
-        /* 토요일 날짜: 파란색 */
-        .fc-day-sat a {
-            color: blue;
-        }
-        body {
-            margin: 40px 10px;
-            padding: 0;
-            font-size: 14px;
-        }
-
-        #calendar{
-            width: 1100px;
-        }
-
-        #user{
-            top: 30px;
-            padding: 0;
-            width: 200px;
-            height: 25%;
-            margin-top: 15px;
-            background-color: cornsilk;
-            border-radius: 5px;
-            border: 1px solid black;
-            cursor: pointer;
-        }
-
-        #list1, #list2{
-            margin-top: 15px;
-            padding: 0;
-            width: 200px;
-            height: 25%;
-            background-color: cornsilk;
-            border-radius: 5px;
-            border:1px solid black;
-        }
-        main{
-            display: flex;
-            justify-content: space-between;
-            width: 1500px;
-            height: 950px;
-        }
-
-        section{
-            position: relative;
-            display: flex;
-            flex-direction: column;
-        }
-
-        #userPhoto{
-            background-image: none;
-            width: 180px;
-            height: 70%;
-            margin: 0 auto;
-            top: 0;
-            border-radius: 5px;
-            background-size: cover;
-            background-position: center;
-        }
-
-        button{
-            width: 50%;
-            background-color: rgba(15, 42, 56, 0.6);
-            color: white;
-            border-radius: 8px;
-            cursor: pointer;
-        }
-
-        button:hover{
-            background-color: #f6dade;
-            color: black;
-        }
-
-        #buttons{
-            display: flex;
-            margin: 5px 5px;
-            padding: 5px 5px;
-        }
-
-        #buttons > button + button{
-            margin-left: 10px;
-        }
-
-
-        #grp_buttons > button:hover{
-            background-color: lightpink;
-        }
-
-
-        li{
-            width: 180px;
-            height: 22%;
-            background-color: rgba(161, 161, 161, 0.3);
-            margin: 5px 5px;
-            border-radius: 5px;
-            padding: 5px;
-            text-align: center;
-        }
-
-        li:hover{
-            background-color: rgba(161, 161, 161, 0.5);
-        }
-
-        .plist_name{
-            font-size: 1.3rem;
-            height: 30px;
-            width: 180px;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
-        }
-
-        .plist_date{
-            font-size: 0.8rem;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
-        }
-
-
-        div{
-            text-align: center;
-        }
-
-        #leftInfo{
-            height: 1000px;
-            margin-right: 50px;
-            font-family: 'Jua', sans-serif;
-            font-size: large;
-            cursor: pointer;
-        }
-        main{
-            margin: 0 auto;
-            display: flex;
-            justify-content: center;
-        }
-
-        #profile{
-            font-size: 1.5rem;
-        }
-
-        span{
-            font-size: 1rem;
-        }
-
-
-        .list_name{
-            margin: 5px 5px;
-            background-color: rgba(209, 239, 255, 0.8)
-        }
-
-        #grp_buttons{
-            width: 100%;
-            margin-top: 6px;
-            left: 5px;
-            position: relative;
-            text-align: left;
-        }
-
-        #grp_buttons:hover{
-            display: flex;
-            flex-direction: column;
-            margin-top: 6px;
-            left: 5px;
-            width: 100%;
-            transition-duration: 0.5s;
-        }
-        #grp_buttons:hover button{
-            position: relative;
-            margin-bottom: 5px;
-            transition-duration: 0.5s;
-        }
-
-
-        #grp_buttons > button {
-            width: 95%;
-            height: 35px;
-            background-color: rgb(248, 232, 245);
-            color: black;
-            border: 0.2px solid black;
-            font-size: 1rem;
-            position: absolute;
-        }
-        #grp_buttons > button:nth-child(1){
-            z-index: 1;
-        }
-
-        #list2{
-            height: 265px;
-        }
-
-        #list1{
-            position: relative;
-            display: inline-block;
-        }
-
-
-
-        .lists{
-            scrollbar-width: none;
-            height: 210px;
-            overflow-y: auto;
-            -ms-scroll-snap-type: none;
-            padding:0 0;
-            margin: 0;
-
-        }
-        ul{
-            list-style: none;
-        }
-
-        .lists::-webkit-scrollbar-thumb{
-            height: 100%;
-            background-color: transparent;
-        }
-
-        .grp {
-            height: 17%;
-        }
-
-
-
-        .lists::-webkit-scrollbar-track {
-            background-color: transparent;
-        }
-
-        .lists::-webkit-scrollbar{
-            width: 0;
-        }
-
-        #list2 > .lists {
-            height: 180px;
-        }
-
-        .weather {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(2, 1fr);
-            border: 1px solid black;
-            border-radius: 5px;
-            padding-top: 8px;
-        }
-
-
-    </style>
 </head>
 <body>
 <main>
@@ -469,7 +45,7 @@
                 <input type="file" hidden/>
             </form>
             <div><span id="profile" th:text="${session.loginedUser.getId()}"></span><span id="profile_word"> 님, 환영합니다</span></div>
-<!--            <div id="userPhoto"><img onclick="change_image()" id="fileName" width="100%" height="100%" th:src="@{http://localhost:8080/user/profile_download/${session.loginedUser.getProfile()}}" alt="프로필 이미지"></div>-->
+            <div id="userPhoto"><img onclick="change_image()" id="fileName" width="100%" height="100%" th:src="@{/user/profile_download/}" alt="프로필 이미지"></div>
             <div id="buttons">
                 <button type="submit" onclick="location.href='/user/logout'">로그아웃</button>
                 <button type="submit" onclick="location.href='/user/delete'">회원탈퇴</button>
@@ -495,189 +71,8 @@
                 <button id="out" onclick="group_secession(groupNo)">그룹 탈퇴하기</button>
             </div>
         </div>
-
     </section>
-
     <div id='calendar'></div>
 </main>
 </body>
 </html>
-
-<script th:inline="javascript">
-    const profileInputForm = document.getElementById('profile-input-form');
-    const profileInput = profileInputForm.querySelector('input')
-
-    profileInput.onchange = () => {
-        if(profileInput.value != ''){
-            profileInputForm.submit();
-        }
-    }
-    function change_image(){
-        profileInput.click();
-    }
-
-
-
-    function group_create(){
-        let groupName = prompt("생성할 그룹 이름을 적어주세요");
-
-        const form = document.createElement('form');
-        form.setAttribute('method', 'post');
-        form.setAttribute('action', "/group/create");
-
-        const data_1 = document.createElement('input');
-        data_1.setAttribute('type', 'hidden'); // type = hidden
-        data_1.setAttribute('name', 'groupName');
-        data_1.setAttribute('value', groupName);
-
-        form.appendChild(data_1);
-        document.body.appendChild(form);
-        form.submit();
-    }
-
-    function direct_group(groupNo){
-
-        console.log("main - direct_group_groupNo : "+groupNo)
-        const form = document.createElement('form');
-        form.setAttribute('method', 'get');
-        form.setAttribute('action', "/main/calendar");
-
-        const data_1 = document.createElement('input');
-        data_1.setAttribute('type', 'hidden'); // type = hidden
-        data_1.setAttribute('name', 'groupNo');
-        data_1.setAttribute('value', groupNo);
-
-        form.appendChild(data_1);
-        document.body.appendChild(form);
-        form.submit();
-    }
-
-    function group_secession(groupNo){
-        if(groupNo === "0"){
-            alert("그룹을 선택해주세요");
-            location.reload();
-        }
-        else{
-            const form = document.createElement('form');
-            form.setAttribute('method', 'post');
-            form.setAttribute('action', "/group/secession");
-
-            const data_1 = document.createElement('input');
-            data_1.setAttribute('type', 'hidden'); // type = hidden
-            data_1.setAttribute('name', 'groupNo');
-            data_1.setAttribute('value', groupNo);
-
-            form.appendChild(data_1);
-            document.body.appendChild(form);
-            form.submit();
-
-        }
-
-    }
-
-    function group_invite(groupNo){
-        if(groupNo === "0"){
-            alert("그룹을 선택해주세요");
-            location.reload();
-        }
-        else {
-            let inviteid = prompt("초대할 사람의 id를 입력해주세요")
-
-            const form = document.createElement('form');
-            form.setAttribute('method', 'post');
-            form.setAttribute('action', "/user/invite");
-
-            const data_1 = document.createElement('input');
-            data_1.setAttribute('type', 'hidden');
-            data_1.setAttribute('name', 'id');
-            data_1.setAttribute('value', inviteid);
-
-            const data_2 = document.createElement('input');
-            data_2.setAttribute('type', 'hidden');
-            data_2.setAttribute('name', 'groupNo');
-            data_2.setAttribute('value', groupNo);
-
-            form.appendChild(data_1);
-            form.appendChild(data_2);
-            document.body.appendChild(form);
-            form.submit();
-        }
-    }
-
-    function dateFormat(date) {
-        let month = date.getMonth() + 1;
-        let day = date.getDate();
-        let hour = date.getHours();
-        let minute = date.getMinutes();
-        let second = date.getSeconds();
-
-        month = month >= 10 ? month : '0' + month;
-        day = day >= 10 ? day : '0' + day;
-        hour = hour >= 10 ? hour : '0' + hour;
-        minute = minute >= 10 ? minute : '0' + minute;
-        second = second >= 10 ? second : '0' + second;
-
-        return date.getFullYear() + '-' + month + '-' + day;
-    }
-
-    $(document).ready(function () {
-        let weatherIcon = {
-            '01' : 'fas fa-sun',
-            '02' : 'fas fa-sun',
-            '03' : 'fas fa-sun',
-            '04' : 'fas fa-sun',
-            '09' : 'fas fa-cloud-sun-rain',
-            '10' : 'fas fa-cloud-showers-heavy',
-            '11' : 'fas fa-cloud-bolt',
-            '13' : 'fas fa-snowflake',
-            '50' : 'fas fa-smog',
-        }
-
-        $.ajax({
-            url: 'http://api.openweathermap.org/data/2.5/weather?q=Daegu&appid=c7d08555216a4a02b0fe0c27b48b8060&units=metric&lang=ko',
-            type: 'get',
-            dataType: 'json',
-            // async: false,
-            success: function(data) {
-                var $Icon = (data.weather[0].icon).substr(0,2);
-                var $Temp = Math.floor(data.main.temp) + '°';
-                var $city = data.name;
-                let abc = "";
-
-                var $min = Math.floor(data.main.temp_min) + '°';
-                var $max = Math.floor(data.main.temp_max) + '°';
-                // var $dateTime = dateFormat(Date.now());
-                // console.log($Icon);
-                // console.log($min);
-                // console.log($max);
-                //
-                if ($Icon >= 50) {
-                    console.log("if들어옴");
-                    abc += "안개";
-                } else if($Icon >= 13) {
-                    abc += "강설";
-                } else if($Icon >= 11) {
-                    abc += "뇌우";
-                } else if($Icon >= 10) {
-                    abc += "폭우";
-                } else if($Icon >= 9) {
-                    abc += "우천";
-                } else if($Icon >= 4) {
-                    abc += "맑음";
-                }
-
-                $('.CurrIcon').append();
-                $('.CurrIcon').append(abc + '<i class="'+ weatherIcon[$Icon] + '"></i>');
-                $('.CurrTemp').prepend($Temp);
-                $('.City').append($city);
-                // $('.Date').append($date);
-                // $('.y').append(Date.now().get)
-
-            }
-
-        })
-    })
-
-
-
-</script>
