--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <title>로그인/회원가입</title>
     <script src="https://kit.fontawesome.com/53e865f4e7.js" crossorigin="anonymous"></script>
+    <script th:src="@{/js/main/login.js}" defer></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}" >
+
 </head>
 
 <body>
-
-<!--<form action="/user/login" method="post">-->
-<!--    <label>아이디: <input type="text" th:name="id"></label>-->
-<!--    <label>비밀번호: <input type="text" th:name="pw"></label>-->
-<!--    <button type="submit">로그인</button>-->
-<!--    <button type="button" onclick="location.href='user/register'" >로그인</button>-->
-<!--</form>-->
 
     <form action="/user/login" method="post">
         <div class="box">
@@ -30,62 +26,3 @@
 </body>
 </html>
 
-
-
-<script>
-    const signUpBox = document.querySelector(".sign-up-box");
-
-    signUpBox.addEventListener("click", handleClick, false);
-    function handleClick(event) {
-        if (signUpBox.classList.contains("active")) return;
-        let str = `
-            <span onclick="event.stopPropagation(); removedActive();">X</span>
-            <input type="text" name="id" placeholder="ID"/>
-            <input type="password" name="pw" placeholder="PASSWORD"/>
-            <input type="file" name="fileData"/>
-<!--            <input type="submit" value="들어가 제발" />-->
-            <button onclick="handleSignUp()">제발 들어가줘</button>
-    `;
-        this.classList.toggle("active");
-        this.innerHTML = "";
-        setTimeout(() => (this.innerHTML = str), 500);
-    }
-
-    function handleSignUp() {
-        let signUpBoxActive = document.querySelector(".active");
-        let inputs = signUpBoxActive.querySelectorAll("input");
-        let form = document.createElement('form');
-        form.setAttribute('method', 'post');
-        form.setAttribute('action', "/user/register");
-        form.setAttribute('enctype', "multipart/form-data");
-
-        let idField = inputs[0];
-        let pwField = inputs[1];
-        let fileField = inputs[2];
-
-        // if (
-        //     idField.value === "" ||
-        //     pwField.value === "" ||
-        //     fileField.value === ""
-        // ) {
-        //     return;
-        // }
-
-        form.appendChild(idField);
-        form.appendChild(pwField);
-        form.appendChild(fileField);
-        document.body.appendChild(form);
-        form.encoding = "multipart/form-data";
-        console.log(form.encoding)
-        form.submit();
-        removedActive();
-
-    }
-
-
-
-    function removedActive() {
-        signUpBox.classList.remove("active");
-        signUpBox.innerHTML = `<i class="fa-solid fa-pen"></i>`;
-    }
-</script>
