--- a/src/main/resources/templates/main/calendar.html
+++ b/src/main/resources/templates/main/calendar.html
@@ -51,6 +51,14 @@
                 <button type="submit" onclick="location.href='/user/logout'">로그아웃</button>
                 <button type="submit" onclick="location.href='/user/delete'">회원탈퇴</button>
             </div>
+            <div id="colorBox">
+                <label><input name="color" class="color" value="red" type="radio">red</label>
+                <label><input name="color" class="color" value="blue" type="radio">blue</label> <br>
+                <label><input name="color" class="color" value="green" type="radio">green</label>
+                <label><input name="color" class="color" value="violet" type="radio" >violet</label> <br>
+                <label><input name="color" class="color" value="orange" type="radio" >orange</label>
+                <label><input name="color" class="color" checked value="nomal" type="radio" >nomal</label>
+            </div>
         </div>
         <div id="list1">
             <div class="list_name" onclick="direct_group(-1)">개인</div>
