--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -15,7 +15,7 @@
         <div class="box">
             <label><input type="text" th:name="id" placeholder="ID" /></label>
             <label><input type="password" th:name="pw" placeholder="PASSWORD" /></label>
-            <button>Sign in</button>
+            <button>로그인</button>
 
             <div class="sign-up-box">
                 <i class="fa-solid fa-pen"></i>
